internals: reorganize files

--- a/src/ui/account/AccountSwitcher.pug
+++ b/src/ui/account/AccountSwitcher.pug
@@ -1,5 +1,5 @@
 script.
-	import Button from '../product/controls/Button.pug'
+	import Button from '../controls/Button.pug'
 	import api from '../../api/index.js'
 	logout = ->
 		api.logout()
