--- a/src/ui/listing/Multireddit.pug
+++ b/src/ui/listing/Multireddit.pug
@@ -1,7 +1,7 @@
 script.
-	import PageUnavailable from '../../infra/PageUnavailable.pug'
-	import PostList from '../listing/PostList.pug'
-	import api from '../../../api/index.js'
+	import api from '../../api/index.js'
+	import PageUnavailable from '../errors/PageUnavailable.pug'
+	import PostList from './PostList.pug'
 	export name = null
 	export sort = null
 	export user_name = null
