--- a/src/ui/post/AVPlayer.pug
+++ b/src/ui/post/AVPlayer.pug
@@ -1,5 +1,5 @@
 script.
-	import { Format } from '../../../utils/index.js'
+	import { Format } from '../../utils/index.js'
 	import Button from '../controls/Button.pug'
 	import { onMount } from 'svelte'
 	export audio_url = null
