--- a/src/ui/post/Avatar.pug
+++ b/src/ui/post/Avatar.pug
@@ -1,6 +1,6 @@
 script.
-	import api from '../../../api/index.js'
-	import { Format } from '../../../utils/index.js'
+	import api from '../../api/index.js'
+	import { Format } from '../../utils/index.js'
 	export autoload = false
 	export name = null
 	deleted = name is '[deleted]'
