--- a/src/ui/post/Comment.pug
+++ b/src/ui/post/Comment.pug
@@ -1,6 +1,6 @@
 script.
-	import { Format } from '../../../utils/index.js'
-	import api from '../../../api/index.js'
+	import { Format } from '../../utils/index.js'
+	import api from '../../api/index.js'
 	import Button from '../controls/Button.pug'
 	import Markup from '../text/Markup.pug'
 	import Score from './Score.pug'
