--- a/src/ui/post/Flair.pug
+++ b/src/ui/post/Flair.pug
@@ -1,5 +1,5 @@
 script.
-	import { Color } from '../../../utils/index.js'
+	import { Color } from '../../utils/index.js'
 	export color = null
 	export emoji_style = null
 	export rich_text = null
