--- a/src/ui/post/Headline.pug
+++ b/src/ui/post/Headline.pug
@@ -1,6 +1,6 @@
 script.
-	import { Format } from '../../../utils/index.js'
-	import api from '../../../api/index.js'
+	import { Format } from '../../utils/index.js'
+	import api from '../../api/index.js'
 	import Flair from './Flair.pug'
 	import Score from './Score.pug'
 	import Tag from './Tag.pug'
