--- a/src/ui/post/Post.pug
+++ b/src/ui/post/Post.pug
@@ -1,6 +1,6 @@
 script.
 	import { afterUpdate } from 'svelte';
-	import { Format } from '../../../utils/index.js'
+	import { Format } from '../../utils/index.js'
 	import AVPlayer from './AVPlayer.pug'
 	import Button from '../controls/Button.pug'
 	import Comment from './Comment.pug'
@@ -9,7 +9,7 @@ script.
 	import Minimap from '../controls/Minimap.pug'
 	import Score from './Score.pug'
 	import SelftextMarkup from './SelftextMarkup.pug'
-	import api from '../../../api/index.js'
+	import api from '../../api/index.js'
 	export short_id = null
 	export standalone = false
 	DOM =
