--- a/src/ui/routing/Application.pug
+++ b/src/ui/routing/Application.pug
@@ -1,5 +1,5 @@
 script.
-	import AccountContext from './AccountContext.pug'
+	import AccountContext from '../account/AccountContext.pug'
 	import Router from './Router.pug'
 
 AccountContext
