--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -1,29 +1,9 @@
 // Type
 @font-face
-	font-family 'Comic Neue'
-	font-style normal
-	font-weight 400
-	src url('./font_comic_neue_400.woff2')
-@font-face
-	font-family 'Comic Neue'
-	font-style italic
-	font-weight 400
-	src url('./font_comic_neue_400_i.woff2')
-@font-face
-	font-family 'Comic Neue'
-	font-style normal
-	font-weight 700
-	src url('./font_comic_neue_700.woff2')
-@font-face
-	font-family 'Comic Neue'
-	font-style italic
-	font-weight 700
-	src url('./font_comic_neue_700_i.woff2')
-@font-face
 	font-family 'Inter'
 	font-style normal italic
 	font-weight 100 900
-	src url('./font_inter_100_900.woff2')
+	src url('../font/inter_100_900.woff2')
 html
 	--typeface-mono 'Roboto Mono', 'Cascadia Mono', 'Consolas', monospace
 
