--- a/src/ui/listing/SubredditDetails.pug
+++ b/src/ui/listing/SubredditDetails.pug
@@ -1,6 +1,6 @@
 script.
+	import api from '../../api/index.js'
 	import Markup from '../text/Markup.pug'
-	import api from '../../../api/index.js'
 	export subreddit_name = null
 	info = null
 	api.watch(api.ID.dataset('subreddit', subreddit_name), (x) -> { data: info } = x)
