--- a/src/ui/routing/Router.pug
+++ b/src/ui/routing/Router.pug
@@ -2,7 +2,8 @@ script.
 	import GlobalNavigation from '../controls/GlobalNavigation.pug'
 	import Listing from '../listing/Listing.pug'
 	import Post from '../post/Post.pug'
-	import RouteNotImplemented from './RouteNotImplemented.pug'
+	import RedirectRoute from './RedirectRoute.pug'
+	import TodoRoute from './TodoRoute.pug'
 	import WikiPage from '../wiki/WikiPage.pug'
 	### START ROUTING CODE ###
 	import parse_route from './parse_route.coffee'
@@ -64,7 +65,9 @@ script.
 	GlobalNavigation
 main
 	{#key route}
-		{#if route.path === 'all'}
+		{#if route.path === 'official_site'}
+			RedirectRoute(path={route.data.path})
+		{:else if route.path === 'all'}
 			Listing(name='all' sort={route.data.posts_sort} type='multireddit' user_name='r')
 		{:else if route.path === 'home'}
 			Listing(name='home' sort={route.data.posts_sort} type='multireddit' user_name='r')
@@ -76,12 +79,12 @@ main
 			Post(short_id={route.data.post_short_id} standalone={true})
 		{:else if route.path === 'subreddit'}
 			Listing(name={route.data.subreddit_name} sort={route.data.posts_sort} type='subreddit')
+		{:else if route.path === 'todo'}
+			TodoRoute(route={route})
 		{:else if route.path === 'user'}
 			Listing(sort={route.data.items_sort} tab_selection={route.data.items_filter} type='user_profile' user_name={route.data.user_name})
 		{:else if route.path === 'wiki'}
 			WikiPage(page_name={route.data.page_name} revision_id={route.data.revision_id} subreddit_name={route.data.subreddit_name})
-		{:else}
-			RouteNotImplemented(route={route})
 
 style.
 	main
