--- a/src/ui/post/AVPlayer.pug
+++ b/src/ui/post/AVPlayer.pug
@@ -107,6 +107,8 @@ style.
 		display flex
 		gap 1em
 		margin-top 1em
+	.media-player
+		position relative
 	.media-player-controls
 		display flex
 		flex-flow column-reverse nowrap
