--- a/src/ui/listing/Listing.pug
+++ b/src/ui/listing/Listing.pug
@@ -7,6 +7,7 @@ script.
 	import PageUnavailable from '../errors/PageUnavailable.pug'
 	import Post from '../post/Post.pug'
 	import PostList from './PostList.pug'
+	import SortPicker from './SortPicker.pug'
 	import TimeRangePicker from './TimeRangePicker.pug'
 	export name = null
 	export page_size = 10
@@ -74,6 +75,7 @@ svelte:head
 			section.listing-tabs
 				{#each tabs as tab}
 					Button(action={() => tab_selection = tab} activated={tab_selection === tab} text={tab})
+		SortPicker(selection={sort.split('-')[0]})
 		TimeRangePicker(selection={sort.split('-')[1]})
 		hr
 		section.listing-tab-content
