--- a/src/ui/listing/TimeRangePicker.pug
+++ b/src/ui/listing/TimeRangePicker.pug
@@ -1,8 +1,10 @@
 script.
+	export base_path = '/'
+	export disabled = false
 	export selection = 'all'
 	format_href = (range) ->
 		url = new URL(location.href)
-		url.searchParams.set('t', range)
+		url.pathname = base_path + '-' + range
 		return url.toString()
 	ranges = [
 		{
@@ -31,12 +33,16 @@ script.
 		}
 	]
 
-fieldset
+fieldset(disabled={disabled})
 	legend Time range
 	{#each ranges as range}
 		a.time-range-option(class:selected={selection === range.value} href={format_href(range.value)}) {range.label}
 
 style.
+	fieldset
+		&[disabled]
+			opacity 0.5
+			pointer-events none
 	legend
 		font-feature-settings 'cpsp' 1
 		font-size 10px
