--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -58,9 +58,11 @@ html
 
 // Body
 body
+	align-items center
 	background-color var(--color-paper)
 	color var(--color-writing)
 	display flex
+	flex-flow column nowrap
 	font 500 14px/1.6 'Inter', sans-serif
 	height 100vh
 	margin 0
