--- a/src/ui/post/Headline.pug
+++ b/src/ui/post/Headline.pug
@@ -61,8 +61,11 @@ style.
 		padding 10px
 		position relative
 		text-align left
+		&:hover
+			color rgba(0,0,0,0.9)
 		&.selected
 			background aliceblue
+			color rgba(0,0,0,0.9)
 	.post-context
 		align-items center
 		display flex
@@ -74,7 +77,7 @@ style.
 		display flex
 		gap 3px
 	.post-title
-		color black
-		font-size 1em
+		font-size inherit
+		font-weight inherit
 		margin 0
 		overflow-wrap anywhere
